--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <form action="mailto: milindmohan25@gmail.com" method="post">
+  <form action="mailto: xyz@gmail.com" method="post">
  
   <header>
     <img src="logo.png">
@@ -31,9 +31,21 @@
 <label for="pass">Password (8 characters minimum):</label>
   <input type="password" id="pass" name="password" placeholder="password" minlength="8" required>
   </div>
+<div>
+  <label for="Booking_people" >Number of people</label>
+  <input type="range" name="Booking_people" id="Booking_people" min="1" max="10" value="4" oninput="this.nextElementSibling.value = this.value" >
+  <output  >4</output>
+</div>
+<div>
+  <label for="Booking_location">locations</label>
+  <input id="Booking_location  "name="Booking_location" list="locations">
+  <datalist id="locations">
+    <option value="Chandigarh"></option>
+    <option value="Mohali"></option>
+  </datalist>
+</div>
+<input type="submit" name="submit" value="submit">
 
-<input type="submit" name="submit" value="checkbox">
-<input type="range" id="booking_table"> 
 </form>
 
 </main>
